--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "757012ca",
    "metadata": {},
    "outputs": [],
@@ -136,12 +136,93 @@
     "                dataframe = dataframe.join(klines, how=\"left\")\n",
     "            dataframe.drop(index=dataframe.index[0].strftime('%Y-%m-%d'), axis=0, inplace=True)\n",
     "            dataframe = pd.concat([old_dataframe,dataframe], axis=0)\n",
-    "            \n",
+    "            return dataframe\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "        \n",
     "        print('--- End Re-Extract Data From Binance')\n",
-    "        return dataframe"
+    "        \n",
+    "    \n",
+    "    \n",
+    "    def Get_Historical_Data_1Day_Forex_Symbols(self):\n",
+    "        '''\n",
+    "        This function RETURN dataframe with FOREX data \n",
+    "        From: 1 Jan, 2020\n",
+    "        Until: 31 Dec, 2023\n",
+    "        '''\n",
+    "        \n",
+    "        dataframe = pd.date_range(start='2020-01-01' , end='2023-12-31', freq=\"1D\").to_frame()\n",
+    "        dataframe.index.name = 'Open time'\n",
+    "        dataframe.drop([0], axis=1, inplace=True)\n",
+    "        \n",
+    "        list_of_data = []\n",
+    "        list_of_data = ['EURUSDT', 'AUDUSDT', 'GBPUSDT', 'CADUSDT', 'JPYUSDT', 'CHFUSDT', 'NZDUSDT', 'SGDUSDT', \n",
+    "                        'HKDUSDT', 'NOKUSDT', 'SEKUSDT', 'DKKUSDT', 'PLNUSDT', 'ZARUSDT', 'RUBUSDT', 'TRYUSDT',\n",
+    "                        'MXNUSDT', 'CZKUSDT', 'HUFUSDT', 'ILSUSDT']\n",
+    "        \n",
+    "        columns = ['Open time', 'Open', 'High', 'Low', 'Close', 'Volume', 'Close time', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore']\n",
+    "        \n",
+    "        print('--- Start Extract Data From Binance\\n.\\n.\\n.')\n",
+    "        \n",
+    "        for i in range(len(list_of_data)):\n",
+    "            try:\n",
+    "                klines = pd.DataFrame(client.get_historical_klines(list_of_data[i], Client.KLINE_INTERVAL_1DAY, start_str=\"2020-01-01\", end_str=\"2023-12-31\"), columns=columns)\n",
+    "                klines[\"Open time\"] = pd.to_datetime(klines[\"Open time\"], unit=\"ms\")\n",
+    "                klines.set_index(\"Open time\", inplace=True)\n",
+    "                klines = klines[[\"Open\", \"High\", \"Low\", \"Close\"]]\n",
+    "               \n",
+    "                for j in range(len(klines.columns)): #Rename the columns\n",
+    "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
+    "                dataframe = dataframe.join(klines, how=\"left\")\n",
+    "            except:\n",
+    "                print('No option!\\nError')\n",
+    "        \n",
+    "        print('--- End Extract Data From Binance')\n",
+    "        return dataframe\n",
+    "        \n",
+    "    def re_Get_Historical_Data_1Day_Forex_Symbols(self, old_dataframe):\n",
+    "        '''\n",
+    "        This function RETURNS a DataFrame with data \n",
+    "        From: Last index of old_dataframe\n",
+    "        Until: Date now\n",
+    "        ------------------------------\n",
+    "        Parameter(old_dataframe): DataFrame\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "    \n",
+    "        old_dataframe_index = old_dataframe.index[-1].strftime('%Y-%m-%d')\n",
+    "        today_date = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "        dataframe = pd.date_range(start=old_dataframe_index, end=today_date, freq=\"1D\").to_frame()\n",
+    "        dataframe.index.name = 'Open time'\n",
+    "        dataframe.drop([0], axis=1, inplace=True)\n",
+    "        \n",
+    "        list_of_data = []\n",
+    "        list_of_data = ['EURUSDT', 'AUDUSDT', 'GBPUSDT', 'CADUSDT', 'JPYUSDT', 'CHFUSDT', 'NZDUSDT', 'SGDUSDT', \n",
+    "                        'HKDUSDT', 'NOKUSDT', 'SEKUSDT', 'DKKUSDT', 'PLNUSDT', 'ZARUSDT', 'RUBUSDT', 'TRYUSDT',\n",
+    "                        'MXNUSDT', 'CZKUSDT', 'HUFUSDT', 'ILSUSDT']\n",
+    "        \n",
+    "        columns = ['Open time', 'Open', 'High', 'Low', 'Close', 'Volume', 'Close time', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore']\n",
+    "        \n",
+    "        print('--- Start Re-Extract Data From Binance\\n.\\n.\\n.')\n",
+    "        \n",
+    "        try:\n",
+    "            for i in range(len(list_of_data)):\n",
+    "                klines = pd.DataFrame(client.get_historical_klines(list_of_data[i], Client.KLINE_INTERVAL_1DAY, start_str=old_dataframe_index, end_str=today_date), columns=columns)\n",
+    "                klines[\"Open time\"] = pd.to_datetime(klines[\"Open time\"], unit=\"ms\")\n",
+    "                klines.set_index(\"Open time\", inplace=True)\n",
+    "                klines = klines[[\"Open\", \"High\", \"Low\", \"Close\"]]\n",
+    "            \n",
+    "                for j in range(len(klines.columns)): #Rename the columns\n",
+    "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
+    "                dataframe = dataframe.join(klines, how=\"left\")\n",
+    "            dataframe.drop(index=dataframe.index[0].strftime('%Y-%m-%d'), axis=0, inplace=True)\n",
+    "            dataframe = pd.concat([old_dataframe,dataframe], axis=0)\n",
+    "            return dataframe\n",
+    "        except:\n",
+    "            print('No option!\\nError')\n",
+    "        \n",
+    "        print('--- End Re-Extract Data From Binance')"
    ]
   },
   {
