--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -29,12 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "757012ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Binance:\n",
+    "    '''\n",
+    "    The name class is Binance\n",
+    "    Return all symbols (Get_All_Coins_Info)\n",
+    "    Extract Data (Get_Historical_Data_1Day)\n",
+    "    Re Extract Data (re_Get_Historical_Data_1Day)\n",
+    "    '''\n",
+    "    \n",
     "    def Get_All_Coins_Info(self, countryCode): #Extract - Filter list Fiat of coin\n",
     "        '''\n",
     "        This function RETURN list with Cryptocurrency Simbols of Binance\n",
