--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "757012ca",
    "metadata": {},
    "outputs": [],
@@ -120,8 +120,8 @@
     "        ------------------------------\n",
     "        '''\n",
     "    \n",
-    "        old_dataframe_index = old_dataframe.index[-1].strftime('%Y-%m-%d')\n",
-    "        today_date = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "        old_dataframe_index = str(old_dataframe.index[-1]) #.strftime('%Y-%m-%d')\n",
+    "        today_date = str(datetime.datetime.now().strftime(\"%Y-%m-%d\"))\n",
     "\n",
     "        dataframe = pd.date_range(start=old_dataframe_index, end=today_date, freq=\"1D\").to_frame()\n",
     "        dataframe.index.name = 'Open time'\n",
@@ -197,8 +197,8 @@
     "        ------------------------------\n",
     "        '''\n",
     "    \n",
-    "        old_dataframe_index = old_dataframe.index[-1].strftime('%Y-%m-%d')\n",
-    "        today_date = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "        old_dataframe_index = str(old_dataframe.index[-1]).strftime('%Y-%m-%d')\n",
+    "        today_date = str(datetime.datetime.now().strftime(\"%Y-%m-%d\"))\n",
     "\n",
     "        dataframe = pd.date_range(start=old_dataframe_index, end=today_date, freq=\"1D\").to_frame()\n",
     "        dataframe.index.name = 'Open time'\n",
