--- a/Functions/Extract_Data/yFinance/yFinance.ipynb
+++ b/Functions/Extract_Data/yFinance/yFinance.ipynb
@@ -15,18 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "51a6a996",
    "metadata": {},
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "04ebcb08",
    "metadata": {},
    "outputs": [],
@@ -36,20 +37,37 @@
     "    The name class is Finance\n",
     "    Return Forex Data with name of Symbols\n",
     "    '''\n",
-    "\n",
-    "    def Get_Historical_Data_1Day_Forex(self):\n",
+    "    \n",
+    "    def Get_All_Symbols(self):\n",
     "        '''\n",
-    "        This function Get_Historical_Data_1Day_Forex() have list of symbols forex.\n",
-    "        This Function Get_Historical_Data_1Day_Forex() return a dataframe with forex data (Open High , Low, Close).\n",
+    "        This Function Get_All_Symbols() Return Symbols of Forex.\n",
     "        '''\n",
     "        \n",
+    "        print('--- Start Get All FOREX Symbols Finance\\n.\\n.\\n.')\n",
+    "\n",
     "        # Define forex symbols\n",
     "        forex_symbols = ['EURUSD=X', 'USDJPY=X', 'GBPUSD=X', 'AUDUSD=X', 'USDCHF=X', 'USDCAD=X', 'NZDUSD=X',\n",
     "                         'EURGBP=X', 'EURJPY=X', 'GBPJPY=X', 'AUDJPY=X', 'EURAUD=X', 'CHFJPY=X',\n",
     "                         'USDSEK=X', 'USDNOK=X', 'USDTRY=X', 'EURTRY=X', 'USDZAR=X']\n",
-    "    \n",
-    "        # Initialize an empty DataFrame for merging the data\n",
-    "        dataframe = pd.DataFrame()\n",
+    "        print('--- End Get All FOREX Symbols Finance\\n')    \n",
+    "\n",
+    "        return forex_symbols\n",
+    "\n",
+    "    def Get_Historical_Data_1Day_Forex(self, forex_symbols):\n",
+    "        '''\n",
+    "        This function Get_Historical_Data_1Day_Forex() have list of symbols forex.\n",
+    "        This Function Get_Historical_Data_1Day_Forex() return a dataframe with forex data (Open High , Low, Close).\n",
+    "        ------------------------------\n",
+    "        Parameter(forex_symbols): List of Forex Symbols\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "        \n",
+    "        print('--- Start Extract Data From Finance\\n.\\n.\\n.')\n",
+    "\n",
+    "        dataframe = pd.date_range(start='2022-01-01', end='2023-12-31', freq=\"1D\").to_frame()\n",
+    "        dataframe.index.name = 'Open time'\n",
+    "        dataframe.drop([0], axis=1, inplace=True)\n",
+    "        \n",
     "\n",
     "        # Loop through the first 3 forex symbols (adjust as needed)\n",
     "        for i in range(len(forex_symbols)):\n",
@@ -79,8 +97,80 @@
     "                dataframe = klines  # Initialize with the first klines DataFrame\n",
     "            else:\n",
     "                dataframe = dataframe.join(klines, how=\"left\")\n",
+    "        print('--- End Extract Data From Finance\\n')\n",
+    "\n",
+    "        return dataframe\n",
+    "\n",
+    "    def re_Get_Historical_Data_1Day_Forex(self, old_dataframe, forex_symbols):\n",
+    "        '''\n",
+    "        This Function RETURN re-extract Forex data and merge old dataframe with new.\n",
+    "        ------------------------------\n",
+    "        Parameter(old_dataframe): DataFrame\n",
+    "        Parameter(forex_symbols): List of Forex Symbols\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "        \n",
+    "        print('--- Start re-Extract Data From Finance\\n.\\n.\\n.')\n",
+    "\n",
+    "        old_dataframe_index = str(old_dataframe.index[-1]) #.strftime('%Y-%m-%d')\n",
+    "        today_date = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "        dataframe = pd.date_range(start=old_dataframe_index, end=today_date, freq=\"1D\").to_frame()\n",
+    "        dataframe.index.name = 'Open time'\n",
+    "        dataframe.drop([0], axis=1, inplace=True)\n",
+    "\n",
+    "        # Loop through the first 3 forex symbols (adjust as needed)\n",
+    "        for i in range(len(forex_symbols)):\n",
+    "            # Download the data for the current forex symbol\n",
+    "            klines = pd.DataFrame(yf.download(forex_symbols[i], start=old_dataframe_index, end=today_date, interval=\"1d\"))\n",
+    "        \n",
+    "            # Flatten MultiIndex columns and remove the name\n",
+    "            klines.columns = klines.columns.get_level_values(0)\n",
+    "            klines.columns.name = None\n",
+    "        \n",
+    "            # Add 'Open time' as the index\n",
+    "            klines['Open time'] = klines.index\n",
+    "            klines.set_index(\"Open time\", inplace=True)\n",
+    "        \n",
+    "            # Convert the index to string format (YYYY-MM-DD)\n",
+    "            klines.index = klines.index.strftime('%Y-%m-%d')\n",
+    "        \n",
+    "            # Select relevant columns\n",
+    "            klines = klines[[\"Open\", \"High\", \"Low\", \"Close\"]]\n",
+    "        \n",
+    "            # Rename the columns to include the forex symbol\n",
+    "            for j in range(len(klines.columns)):\n",
+    "                klines.rename(columns={klines.columns[j]: forex_symbols[i][:-2] + '_' + klines.columns[j]}, inplace=True)\n",
+    "\n",
+    "            # Merge klines with the main DataFrame using a left join\n",
+    "            if dataframe.empty:\n",
+    "                dataframe = klines  # Initialize with the first klines DataFrame\n",
+    "            else:\n",
+    "                dataframe = dataframe.join(klines, how=\"left\")\n",
+    "        dataframe.drop(index=[dataframe.index[0]], inplace=True)\n",
+    "        dataframe = pd.concat([old_dataframe,dataframe], axis=0)\n",
+    "        print('--- End re-Extract Data From Finance\\n')\n",
+    "\n",
+    "        return dataframe\n",
     "    \n",
-    "        return dataframe"
+    "    def Select_Target_Finance(self, dataframe, column_name):\n",
+    "        '''\n",
+    "        This function RETURN a dataframe with Target\n",
+    "        ------------------------------\n",
+    "        Parameter(dataframe): DataFrame\n",
+    "        Parameter(column_name): Column Name\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "        try:\n",
+    "            print('--- Start Select_Target (Finance)\\n.\\nTarget: ',column_name, '\\n.')\n",
+    "        \n",
+    "            new_dataframe = dataframe.copy()\n",
+    "            new_dataframe.insert(0, 'Target_'+column_name, new_dataframe[column_name].shift(-1))\n",
+    "    \n",
+    "            print('--- End Select_Target (Finance)\\n')\n",
+    "            return new_dataframe\n",
+    "        except:\n",
+    "            print('No option!\\nError')"
    ]
   },
   {
