--- a/Functions/Save_CSV/Save_CSV.ipynb
+++ b/Functions/Save_CSV/Save_CSV.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f6f18bda",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
-    "    dataframe.to_csv('../Forecast_Prices/Data/Binance_Data_Crypto/'+name_of_csv+'.csv') "
+    "    dataframe.to_csv('../Forecast_Prices/Data/'+name_of_csv+'.csv') "
    ]
   },
   {
