--- a/Functions/Strategies/Feature_Engineering/FE.ipynb
+++ b/Functions/Strategies/Feature_Engineering/FE.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "05eb7df3",
    "metadata": {},
    "outputs": [],
@@ -97,10 +97,51 @@
     "            return self.data\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "    def Moving_Average_All(self, ma_number):\n",
+    "        '''\n",
+    "        This Function of Feature_Engineering return Dataframe with (Slow or Fast) All Moving Average.\n",
+    "        - For short-term trading: Use shorter MAs (e.g., 5-day and 20-day).\n",
+    "        - For long-term investing: Use longer MAs (e.g., 50-day and 200-day).\n",
+    "        - Fast Moving Average (FMA): Used for short-term trends, typically with smaller periods like 9, 12, or 20.\n",
+    "        - Slow Moving Average (SMA): Used for long-term trends, typically with larger periods like 50, 100, or 200.\n",
+    "        - 1. Buy Signal Occurs when the Fast Moving Average crosses above the Slow Moving Average.\n",
+    "        - 2. Sell Signal Occurs when the Fast Moving Average crosses below the Slow Moving Average.\n",
+    "        ------------------------------\n",
+    "        Parameter(column_name): LIST of dataframe column name\n",
+    "        Parameter(ma_number): Number of Moving Average (Slow - Fast)\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "        \n",
+    "        try:\n",
+    "            if not (5 <= ma_number <= 200):\n",
+    "                raise ValueError(\"ma_number must be between 5 and 200\")\n",
+    "        \n",
+    "            # Create a dictionary to hold the new columns\n",
+    "            new_columns = {}\n",
+    "        \n",
+    "            # Iterate through columns and calculate moving averages\n",
+    "            for col in self.data.columns:\n",
+    "                if '_FMA_' not in col and '_SMA_' not in col and '_FEMA_' not in col and '_SEMA_' not in col and '_RSD_' not in col and '_RSI_' not in col:\n",
+    "                    if ma_number <= 20:\n",
+    "                        new_col_name = f\"{col}_FMA_{ma_number}\"\n",
+    "                        new_columns[new_col_name] = self.data[col].rolling(window=ma_number).mean()\n",
+    "                    elif ma_number >= 25:\n",
+    "                        new_col_name = f\"{col}_SMA_{ma_number}\"\n",
+    "                        new_columns[new_col_name] = self.data[col].rolling(window=ma_number).mean()\n",
+    "        \n",
+    "            # Add new columns to the DataFrame at once\n",
+    "            self.data = pd.concat([self.data, pd.DataFrame(new_columns, index=self.data.index)], axis=1)\n",
+    "            return self.data\n",
+    "    \n",
+    "        except:\n",
+    "            print('No option!\\nError')\n",
     "#------------------------------------------------------------------------------------------------------------------------------#\n",
     "    def Exponential_Moving_Average(self, column_name, ema_number):\n",
     "        '''\n",
-    "        This Function of Feature_Engineering return Dataframe with Exponential Moving Average\n",
+    "        This Function of Feature_Engineering return Dataframe with All Exponential Moving Average.\n",
     "        - Short-term (Fast EMA): Use 5, 7, 10, or 20 periods.\n",
     "        - Medium-term: Use 50 periods.\n",
     "        - Long-term (Slow EMA): Use 100 or 200 periods.\n",
@@ -118,6 +159,46 @@
     "                elif (ema_number >=25 and ema_number <= 200):\n",
     "                    self.data[column_name[_]+'_SEMA_'+str(ema_number)] = self.data[column_name[_]].ewm(span=ema_number, adjust=False).mean()\n",
     "            return self.data\n",
+    "        except:\n",
+    "            print('No option!\\nError')\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "    def Exponential_Moving_Average_All(self, ema_number):\n",
+    "        '''\n",
+    "        This Function of Feature_Engineering returns a DataFrame with Exponential Moving Averages.\n",
+    "        - Short-term (Fast EMA): Use 5, 7, 10, or 20 periods.\n",
+    "        - Medium-term: Use 50 periods.\n",
+    "        - Long-term (Slow EMA): Use 100 or 200 periods.\n",
+    "        (Use the same periods as Slow/Fast Moving Averages or slightly slower.)\n",
+    "        ------------------------------\n",
+    "        Parameter(ema_number): Number of periods for EMA calculation (int, between 5 and 200)\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "    \n",
+    "        try:\n",
+    "            # Validate ema_number\n",
+    "            if not (5 <= ema_number <= 200):\n",
+    "                raise ValueError(\"ema_number must be between 5 and 200.\")\n",
+    "        \n",
+    "            # Create a dictionary for the new EMA columns\n",
+    "            new_columns = {}\n",
+    "        \n",
+    "            # Iterate over the DataFrame columns\n",
+    "            for col in self.data.columns:\n",
+    "                if not any(keyword in col for keyword in ['_FMA_', '_SMA_', '_FEMA_', '_SEMA_', '_RSD_', '_RSI_']):\n",
+    "                    if ema_number <= 20:\n",
+    "                        new_col_name = f\"{col}_FEMA_{ema_number}\"\n",
+    "                    else:\n",
+    "                        new_col_name = f\"{col}_SEMA_{ema_number}\"\n",
+    "                \n",
+    "                    # Calculate EMA and add to the dictionary\n",
+    "                    new_columns[new_col_name] = self.data[col].ewm(span=ema_number, adjust=False).mean()\n",
+    "        \n",
+    "            # Add all new EMA columns to the DataFrame at once\n",
+    "            self.data = pd.concat([self.data, pd.DataFrame(new_columns, index=self.data.index)], axis=1)\n",
+    "            return self.data\n",
+    "    \n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "#------------------------------------------------------------------------------------------------------------------------------#    \n",
