--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -51,7 +51,7 @@
     "        '''\n",
     "\n",
     "        try:\n",
-    "            print('--- Start Get All Coins From Binance\\n.\\n.\\n.')\n",
+    "            print('--- Start Get All Coins From Binance\\n.')\n",
     "\n",
     "            info_coins = []\n",
     "            exchange_info = client.get_exchange_info()\n",
@@ -62,7 +62,8 @@
     "                if info_df['quoteAsset'][_] == countryCode:\n",
     "                    #print(_, ': ', info_df['symbol'][_], ': ', info_df['quoteAsset'][_])\n",
     "                    info_coins.append(info_df['symbol'][_])\n",
-    "            print('--- End Get_All_Coins_Info From Binance')    \n",
+    "            print('Symbols: ', '(', countryCode, ')\\n') \n",
+    "            print('--- End Get_All_Coins_Info From Binance\\n')\n",
     "            return info_coins\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
@@ -104,7 +105,7 @@
     "            except:\n",
     "                print('No option!\\nError')\n",
     "        \n",
-    "        print('--- End Extract Data From Binance')\n",
+    "        print('--- End Extract Data From Binance\\n')\n",
     "        return dataframe\n",
     "    \n",
     "    \n",
@@ -141,95 +142,39 @@
     "                for j in range(len(klines.columns)): #Rename the columns\n",
     "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
     "                dataframe = dataframe.join(klines, how=\"left\")\n",
-    "            dataframe.drop(index=dataframe.index[0].strftime('%Y-%m-%d'), axis=0, inplace=True)\n",
+    "            dataframe.drop(index=[dataframe.index[0]], inplace=True)\n",
     "            dataframe = pd.concat([old_dataframe,dataframe], axis=0)\n",
-    "            return dataframe\n",
-    "        except:\n",
-    "            print('No option!\\nError')\n",
-    "        \n",
-    "        print('--- End Re-Extract Data From Binance')\n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "    def Get_Historical_Data_1Day_Forex_Symbols(self):\n",
-    "        '''\n",
-    "        This function RETURN dataframe with FOREX data \n",
-    "        From: 1 Jan, 2020\n",
-    "        Until: 31 Dec, 2023\n",
-    "        '''\n",
-    "        \n",
-    "        dataframe = pd.date_range(start='2020-01-01' , end='2023-12-31', freq=\"1D\").to_frame()\n",
-    "        dataframe.index.name = 'Open time'\n",
-    "        dataframe.drop([0], axis=1, inplace=True)\n",
-    "        \n",
-    "        list_of_data = []\n",
-    "        list_of_data = ['EURUSDT', 'AUDUSDT', 'GBPUSDT', 'CADUSDT', 'JPYUSDT', 'CHFUSDT', 'NZDUSDT', 'SGDUSDT', \n",
-    "                        'HKDUSDT', 'NOKUSDT', 'SEKUSDT', 'DKKUSDT', 'PLNUSDT', 'ZARUSDT', 'RUBUSDT', 'TRYUSDT',\n",
-    "                        'MXNUSDT', 'CZKUSDT', 'HUFUSDT', 'ILSUSDT']\n",
-    "        \n",
-    "        columns = ['Open time', 'Open', 'High', 'Low', 'Close', 'Volume', 'Close time', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore']\n",
-    "        \n",
-    "        print('--- Start Extract Data From Binance\\n.\\n.\\n.')\n",
-    "        \n",
-    "        for i in range(len(list_of_data)):\n",
-    "            try:\n",
-    "                klines = pd.DataFrame(client.get_historical_klines(list_of_data[i], Client.KLINE_INTERVAL_1DAY, start_str=\"2020-01-01\", end_str=\"2023-12-31\"), columns=columns)\n",
-    "                klines[\"Open time\"] = pd.to_datetime(klines[\"Open time\"], unit=\"ms\")\n",
-    "                klines.set_index(\"Open time\", inplace=True)\n",
-    "                klines = klines[[\"Open\", \"High\", \"Low\", \"Close\"]]\n",
-    "               \n",
-    "                for j in range(len(klines.columns)): #Rename the columns\n",
-    "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
-    "                dataframe = dataframe.join(klines, how=\"left\")\n",
-    "            except:\n",
-    "                print('No option!\\nError')\n",
-    "        \n",
-    "        print('--- End Extract Data From Binance')\n",
-    "        return dataframe\n",
-    "        \n",
-    "    def re_Get_Historical_Data_1Day_Forex_Symbols(self, old_dataframe):\n",
-    "        '''\n",
-    "        This function RETURNS a DataFrame with data \n",
-    "        From: Last index of old_dataframe\n",
-    "        Until: Date now\n",
-    "        ------------------------------\n",
-    "        Parameter(old_dataframe): DataFrame\n",
-    "        ------------------------------\n",
-    "        '''\n",
-    "    \n",
-    "        old_dataframe_index = str(old_dataframe.index[-1]).strftime('%Y-%m-%d')\n",
-    "        today_date = str(datetime.datetime.now().strftime(\"%Y-%m-%d\"))\n",
-    "\n",
-    "        dataframe = pd.date_range(start=old_dataframe_index, end=today_date, freq=\"1D\").to_frame()\n",
-    "        dataframe.index.name = 'Open time'\n",
-    "        dataframe.drop([0], axis=1, inplace=True)\n",
-    "        \n",
-    "        list_of_data = []\n",
-    "        list_of_data = ['EURUSDT', 'AUDUSDT', 'GBPUSDT', 'CADUSDT', 'JPYUSDT', 'CHFUSDT', 'NZDUSDT', 'SGDUSDT', \n",
-    "                        'HKDUSDT', 'NOKUSDT', 'SEKUSDT', 'DKKUSDT', 'PLNUSDT', 'ZARUSDT', 'RUBUSDT', 'TRYUSDT',\n",
-    "                        'MXNUSDT', 'CZKUSDT', 'HUFUSDT', 'ILSUSDT']\n",
-    "        \n",
-    "        columns = ['Open time', 'Open', 'High', 'Low', 'Close', 'Volume', 'Close time', 'Quote asset volume', 'Number of trades', 'TB Base Vol', 'TB Quot Vol', 'Ignore']\n",
-    "        \n",
-    "        print('--- Start Re-Extract Data From Binance\\n.\\n.\\n.')\n",
-    "        \n",
-    "        try:\n",
-    "            for i in range(len(list_of_data)):\n",
-    "                klines = pd.DataFrame(client.get_historical_klines(list_of_data[i], Client.KLINE_INTERVAL_1DAY, start_str=old_dataframe_index, end_str=today_date), columns=columns)\n",
-    "                klines[\"Open time\"] = pd.to_datetime(klines[\"Open time\"], unit=\"ms\")\n",
-    "                klines.set_index(\"Open time\", inplace=True)\n",
-    "                klines = klines[[\"Open\", \"High\", \"Low\", \"Close\"]]\n",
+    "            print('--- End Re-Extract Data From Binance\\n')\n",
     "            \n",
-    "                for j in range(len(klines.columns)): #Rename the columns\n",
-    "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
-    "                dataframe = dataframe.join(klines, how=\"left\")\n",
-    "            dataframe.drop(index=dataframe.index[0].strftime('%Y-%m-%d'), axis=0, inplace=True)\n",
-    "            dataframe = pd.concat([old_dataframe,dataframe], axis=0)\n",
     "            return dataframe\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def Select_Target(self, dataframe, column_name):\n",
+    "        '''\n",
+    "        This function RETURN a dataframe with Target\n",
+    "        ------------------------------\n",
+    "        Parameter(dataframe): DataFrame\n",
+    "        Parameter(column_name): Column Name\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "        try:\n",
+    "            print('--- Start Select_Target()\\n.\\nTarget: ',column_name, '\\n.')\n",
     "        \n",
-    "        print('--- End Re-Extract Data From Binance')"
+    "            new_dataframe = dataframe.copy()\n",
+    "            new_dataframe['Date'] = new_dataframe.index\n",
+    "            new_dataframe['Date'] = new_dataframe['Date'].shift(-1)\n",
+    "            new_dataframe.index = new_dataframe['Date']\n",
+    "            new_dataframe.drop(['Date'], axis=1, inplace=True)\n",
+    "            new_dataframe.insert(0, 'Target_'+column_name, new_dataframe[column_name].shift(-1))\n",
+    "            new_dataframe.dropna(axis=0, inplace=True)\n",
+    "    \n",
+    "            print('--- End Select_Target()\\n')\n",
+    "            return new_dataframe\n",
+    "        except:\n",
+    "            print('No option!\\nError')"
    ]
   },
   {
