--- a/Functions/Preparation_Data/Preprocessing.ipynb
+++ b/Functions/Preparation_Data/Preprocessing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "7e7e2c3c",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
     "    Target_Correlation = pd.DataFrame(data=dataframe.corr()[column_target]).copy()\n",
     "\n",
     "    try:\n",
-    "        print('--- Start Correlation()\\n.\\n.')\n",
+    "        print('--- Start Correlation()\\n.')\n",
     "        \n",
     "        for _ in range(len(Target_Correlation)):\n",
     "            #print(_, ': ', Target_Correlation.index[_], ' --- ', Target_Correlation.iloc[_,0])\n",
@@ -70,39 +70,11 @@
     "                #print(_, ': ', Target_Correlation.index[_], ' --- ', Target_Correlation.iloc[_,0])\n",
     "                correlation.append(Target_Correlation.index[_])\n",
     "        \n",
-    "        print('Correlation between: ', '(', -number, ' - ', number, ')\\nLength of Dataframe is: ', len(correlation))\n",
-    "        print('--- End Correlation()')\n",
+    "        print('Name of Target is: ', column_target, '\\nCorrelation between: ', '(', -number, ' - ', number, ')', '\\nLength of Dataframe is: ', len(correlation))\n",
+    "        print('.\\n--- End Correlation()\\n')\n",
     "        #return correlation\n",
     "        return dataframe[correlation]\n",
     "    \n",
-    "    except:\n",
-    "        print('No option!\\nError')\n",
-    "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
-    "\n",
-    "\n",
-    "\n",
-    "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
-    "def Select_Target(dataframe, column_name):\n",
-    "    '''\n",
-    "    This function RETURN a dataframe with Target\n",
-    "    ------------------------------\n",
-    "    Parameter(dataframe): DataFrame\n",
-    "    Parameter(column_name): Column Name\n",
-    "    ------------------------------\n",
-    "    '''\n",
-    "    try:\n",
-    "        print('--- Start Select_Target()\\n.\\nTarget: ',column_name, '\\n.')\n",
-    "        \n",
-    "        new_dataframe = dataframe.copy()\n",
-    "        new_dataframe['Date'] = new_dataframe.index\n",
-    "        new_dataframe['Date'] = new_dataframe['Date'].shift(-1)\n",
-    "        new_dataframe.index = new_dataframe['Date']\n",
-    "        new_dataframe.drop(['Date'], axis=1, inplace=True)\n",
-    "        new_dataframe.insert(0, 'Target_'+column_name, new_dataframe[column_name].shift(-1))\n",
-    "        new_dataframe.dropna(axis=0, inplace=True)\n",
-    "    \n",
-    "        print('--- End Select_Target()\\n')\n",
-    "        return new_dataframe\n",
     "    except:\n",
     "        print('No option!\\nError')\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
