--- a/Functions/Visualization/Plots.ipynb
+++ b/Functions/Visualization/Plots.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "41947e15",
    "metadata": {},
    "outputs": [],
@@ -53,6 +53,8 @@
     "    Parameter(dataframe): DataFrame\n",
     "    ------------------------------\n",
     "    '''\n",
+    "    \n",
+    "    dataframe = dataframe.dropna()\n",
     "    \n",
     "    plt.style.use(\"cyberpunk\") #Background color\n",
     "    fig, ax = plt.subplots(1, 2, figsize=(18, 9), tight_layout=True)\n",
@@ -89,6 +91,8 @@
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
+    "    dataframe = dataframe.dropna()\n",
+    "\n",
     "    pal_dark = sns.color_palette(\"Greys\")\n",
     "    data = dataframe.copy()\n",
     "    data.index = pd.to_datetime(data.index)\n",
@@ -140,6 +144,7 @@
     "        ------------------------------\n",
     "        '''\n",
     "        \n",
+    "        dataframe = dataframe.dropna()\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)  # 80% X_train - 20% X_test\n",
@@ -267,6 +272,8 @@
     "        Parameter(dataframe): DataFrame\n",
     "        ------------------------------\n",
     "        '''\n",
+    "        \n",
+    "        dataframe = dataframe.dropna()\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)  # 80% X_train - 20% X_test\n",
@@ -432,6 +439,7 @@
     "    try:\n",
     "        prediction = [] #Create a list value\n",
     "    \n",
+    "        dataframe = dataframe.dropna()\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False) #80% X_train - 20% X_test\n",
@@ -638,7 +646,10 @@
     "    Parameter(column_name_2): Column Name (string)\n",
     "    ------------------------------\n",
     "    '''\n",
+    "    \n",
     "    try:\n",
+    "        dataframe = dataframe.dropna()\n",
+    "\n",
     "        pal_red = sns.color_palette(\"flare\") #Color\n",
     "        pal_blue = sns.color_palette(\"Blues\") #Color\n",
     "\n",
@@ -762,7 +773,8 @@
     "    \n",
     "    try:\n",
     "        prediction = [] #Create a list value\n",
-    "    \n",
+    "        \n",
+    "        dataframe = dataframe.dropna()\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False) #80% X_train - 20% X_test\n",
