--- a/Functions/OHLC/OHLC_S_F.ipynb
+++ b/Functions/OHLC/OHLC_S_F.ipynb
@@ -78,6 +78,7 @@
     "    data_pred = 30\n",
     "    #------------#\n",
     "    new_dataframe = dataframe.copy()\n",
+    "    new_dataframe = new_dataframe.dropna()\n",
     "    list_index = new_dataframe[-data_number:].index\n",
     "    list_index = pd.to_datetime(list_index)\n",
     "\n",
@@ -338,6 +339,7 @@
     "    data_pred = 30\n",
     "    #------------#\n",
     "    new_dataframe = dataframe.copy()\n",
+    "    new_dataframe = new_dataframe.dropna()\n",
     "    list_index = new_dataframe[-data_number:].index\n",
     "    list_index = pd.to_datetime(list_index)\n",
     "\n",
@@ -558,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "481b1626",
    "metadata": {},
    "outputs": [],
@@ -585,6 +587,7 @@
     "    data_pred = 30\n",
     "    #------------#\n",
     "    new_dataframe = dataframe.copy()\n",
+    "    new_dataframe = new_dataframe.dropna()\n",
     "    list_index = new_dataframe[-data_number:].index\n",
     "    list_index = pd.to_datetime(list_index)\n",
     "\n",
