--- a/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
+++ b/Functions/Extract_Data/Binance_API/Extract_Binance_Data.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "757012ca",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
     "                if info_df['quoteAsset'][_] == countryCode:\n",
     "                    #print(_, ': ', info_df['symbol'][_], ': ', info_df['quoteAsset'][_])\n",
     "                    info_coins.append(info_df['symbol'][_])\n",
-    "            print('Symbols: ', '(', countryCode, ')\\n') \n",
+    "            print('Symbols: ', '(', countryCode, ')\\n.') \n",
     "            print('--- End Get_All_Coins_Info From Binance\\n')\n",
     "            return info_coins\n",
     "        except:\n",
@@ -121,8 +121,8 @@
     "        ------------------------------\n",
     "        '''\n",
     "    \n",
-    "        old_dataframe_index = str(old_dataframe.index[-1]) #.strftime('%Y-%m-%d')\n",
-    "        today_date = str(datetime.datetime.now().strftime(\"%Y-%m-%d\"))\n",
+    "        old_dataframe_index = str(old_dataframe.index[-1]) #.strftime(\"%Y-%m-%d\")\n",
+    "        today_date = datetime.datetime.now().strftime(\"%Y-%m-%d\")\n",
     "\n",
     "        dataframe = pd.date_range(start=old_dataframe_index, end=today_date, freq=\"1D\").to_frame()\n",
     "        dataframe.index.name = 'Open time'\n",
@@ -142,8 +142,9 @@
     "                for j in range(len(klines.columns)): #Rename the columns\n",
     "                    klines.rename(columns={klines.columns[j] : list_of_data[i]+'_'+klines.columns[j]}, inplace=True) \n",
     "                dataframe = dataframe.join(klines, how=\"left\")\n",
+    "\n",
     "            dataframe.drop(index=[dataframe.index[0]], inplace=True)\n",
-    "            dataframe = pd.concat([old_dataframe,dataframe], axis=0)\n",
+    "            #dataframe = pd.concat([old_dataframe, dataframe], axis=0)\n",
     "            print('--- End Re-Extract Data From Binance\\n')\n",
     "            \n",
     "            return dataframe\n",
@@ -161,7 +162,7 @@
     "        ------------------------------\n",
     "        '''\n",
     "        try:\n",
-    "            print('--- Start Select_Target()\\n.\\nTarget: ',column_name, '\\n.')\n",
+    "            print('--- Start Select_Target (Binance)\\n.\\nTarget: ',column_name, '\\n.')\n",
     "        \n",
     "            new_dataframe = dataframe.copy()\n",
     "            new_dataframe['Date'] = new_dataframe.index\n",
@@ -170,8 +171,8 @@
     "            new_dataframe.drop(['Date'], axis=1, inplace=True)\n",
     "            new_dataframe.insert(0, 'Target_'+column_name, new_dataframe[column_name].shift(-1))\n",
     "            new_dataframe.dropna(axis=0, inplace=True)\n",
-    "    \n",
-    "            print('--- End Select_Target()\\n')\n",
+    "            print('--- End Select_Target (Binance)\\n')\n",
+    "\n",
     "            return new_dataframe\n",
     "        except:\n",
     "            print('No option!\\nError')"
