--- a/Functions/Strategies/Feature_Engineering/FE.ipynb
+++ b/Functions/Strategies/Feature_Engineering/FE.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "05eb7df3",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,7 @@
     "        \n",
     "            # Iterate through columns and calculate moving averages\n",
     "            for col in self.data.columns:\n",
-    "                if '_FMA_' not in col and '_SMA_' not in col and '_FEMA_' not in col and '_SEMA_' not in col and '_RSD_' not in col and '_RSI_' not in col:\n",
+    "                if 'Target_' not in col and '_FMA_' not in col and '_SMA_' not in col and '_FEMA_' not in col and '_SEMA_' not in col and '_RSD_' not in col and '_RSI_' not in col:\n",
     "                    if ma_number <= 20:\n",
     "                        new_col_name = f\"{col}_FMA_{ma_number}\"\n",
     "                        new_columns[new_col_name] = self.data[col].rolling(window=ma_number).mean()\n",
@@ -186,7 +186,7 @@
     "        \n",
     "            # Iterate over the DataFrame columns\n",
     "            for col in self.data.columns:\n",
-    "                if not any(keyword in col for keyword in ['_FMA_', '_SMA_', '_FEMA_', '_SEMA_', '_RSD_', '_RSI_']):\n",
+    "                if not any(keyword in col for keyword in ['Target_', '_FMA_', '_SMA_', '_FEMA_', '_SEMA_', '_RSD_', '_RSI_']):\n",
     "                    if ema_number <= 20:\n",
     "                        new_col_name = f\"{col}_FEMA_{ema_number}\"\n",
     "                    else:\n",
