--- a/Functions/Visualization/Plots.ipynb
+++ b/Functions/Visualization/Plots.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "41947e15",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
-    "    dataframe = dataframe.dropna()\n",
+    "    dataframe.dropna(axis=0, inplace=True)\n",
     "    \n",
     "    plt.style.use(\"cyberpunk\") #Background color\n",
     "    fig, ax = plt.subplots(1, 2, figsize=(18, 9), tight_layout=True)\n",
@@ -91,7 +91,7 @@
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
-    "    dataframe = dataframe.dropna()\n",
+    "    dataframe.dropna(axis=0, inplace=True)\n",
     "\n",
     "    pal_dark = sns.color_palette(\"Greys\")\n",
     "    data = dataframe.copy()\n",
@@ -144,7 +144,7 @@
     "        ------------------------------\n",
     "        '''\n",
     "        \n",
-    "        dataframe = dataframe.dropna()\n",
+    "        dataframe.dropna(axis=0, inplace=True)\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)  # 80% X_train - 20% X_test\n",
@@ -273,7 +273,7 @@
     "        ------------------------------\n",
     "        '''\n",
     "        \n",
-    "        dataframe = dataframe.dropna()\n",
+    "        dataframe.dropna(axis=0, inplace=True)\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False)  # 80% X_train - 20% X_test\n",
@@ -439,7 +439,7 @@
     "    try:\n",
     "        prediction = [] #Create a list value\n",
     "    \n",
-    "        dataframe = dataframe.dropna()\n",
+    "        dataframe.dropna(axis=0, inplace=True)\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False) #80% X_train - 20% X_test\n",
@@ -648,7 +648,7 @@
     "    '''\n",
     "    \n",
     "    try:\n",
-    "        dataframe = dataframe.dropna()\n",
+    "        dataframe.dropna(axis=0, inplace=True)\n",
     "\n",
     "        pal_red = sns.color_palette(\"flare\") #Color\n",
     "        pal_blue = sns.color_palette(\"Blues\") #Color\n",
@@ -774,7 +774,7 @@
     "    try:\n",
     "        prediction = [] #Create a list value\n",
     "        \n",
-    "        dataframe = dataframe.dropna()\n",
+    "        dataframe.dropna(axis=0, inplace=True)\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, shuffle=False) #80% X_train - 20% X_test\n",
