--- a/Functions/Strategies/Feature_Engineering/FE.ipynb
+++ b/Functions/Strategies/Feature_Engineering/FE.ipynb
@@ -82,6 +82,11 @@
     "        - Slow Moving Average (SMA): Used for long-term trends, typically with larger periods like 50, 100, or 200.\n",
     "        - 1. Buy Signal Occurs when the Fast Moving Average crosses above the Slow Moving Average.\n",
     "        - 2. Sell Signal Occurs when the Fast Moving Average crosses below the Slow Moving Average.\n",
+    "        \n",
+    "        -Golden Cross:\n",
+    "            1) Fast 20-day EMA rises above the slow 50-day EMA → Buy.\n",
+    "        -Death Cross:\n",
+    "            2) Fast 20-day EMA falls below the slow 50-day EMA → Sell.\n",
     "        ------------------------------\n",
     "        Parameter(column_name): LIST of dataframe column name\n",
     "        Parameter(ma_number): Number of Moving Average (Slow - Fast)\n",
@@ -146,6 +151,19 @@
     "        - Medium-term: Use 50 periods.\n",
     "        - Long-term (Slow EMA): Use 100 or 200 periods.\n",
     "        (Use the Same Periods of Slow/Fast Moving Average (or little slow))\n",
+    "        \n",
+    "        2. Dual EMA Crossover\n",
+    "            Use two EMAs: a fast EMA (e.g., 12-period) and a slow EMA (e.g., 26-period).\n",
+    "            Buy Signal: When the fast EMA crosses above the slow EMA (golden cross).\n",
+    "            Sell Signal: When the fast EMA crosses below the slow EMA (death cross).\n",
+    "        3. Triple EMA Strategy\n",
+    "            Use three EMAs (e.g., 9, 21, and 50).\n",
+    "            Buy Signal: When the shortest EMA is above the medium EMA, which is above the long EMA.\n",
+    "            Sell Signal: When the shortest EMA is below the medium EMA, which is below the long EMA.\n",
+    "        Tips for Using EMA\n",
+    "        Combine EMA with other indicators like RSI, MACD, or volume for better signal confirmation.\n",
+    "        Use multiple timeframes to validate signals (e.g., daily and hourly charts).\n",
+    "        Avoid relying solely on EMA in highly volatile or range-bound markets.\n",
     "        ------------------------------\n",
     "        Parameter(name_of_column): LIST of dataframe column name\n",
     "        Parameter(ema_number): Number of EMA\n",
