--- a/Functions/OHLC/OHLC_S_F.ipynb
+++ b/Functions/OHLC/OHLC_S_F.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "c877301b",
    "metadata": {},
    "outputs": [],
@@ -169,17 +169,22 @@
     "        plt.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
     "\n",
     "        for _ in range(len(list_index)):\n",
-    "            if (list_open[_] - list_close[_]) > 0:\n",
-    "                ax1.bar(list_index[_], list_open[_] - list_close[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_close[_], edgecolor=pal_green[4], color='None')\n",
-    "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_green[5])\n",
-    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
-    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
-    "            else:\n",
-    "                ax1.bar(list_index[_], list_close[_] - list_open[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_open[_], edgecolor=pal_red[2], color='None')\n",
+    "            if (list_open[_] > list_close[_]):\n",
+    "                ax1.bar(list_index[_], list_open[_] - list_close[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_close[_], edgecolor=pal_red[2], color='None')\n",
     "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_red[3])\n",
-    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
-    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
-    "                    \n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
+    "            elif (list_open[_] < list_close[_]):\n",
+    "                ax1.bar(list_index[_], list_close[_] - list_open[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_open[_], edgecolor=pal_green[4], color='None')\n",
+    "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_green[5])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
+    "            else:\n",
+    "                ax1.bar(list_index[_], list_close[_] - list_open[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_open[_], edgecolor=pal_black[2], color='None')\n",
+    "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_black[4])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_black[2])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_black[2])\n",
+    "                \n",
     "        # Update the last bar's color based on the checkbox state\n",
     "        if len(List_MA) == 2:\n",
     "            if sma_checkbox.value:\n",
@@ -250,7 +255,7 @@
     "                elif (_ > 0) and (Y_test.iloc[_] < Y_test.iloc[_-1]) and (predict_model[_] <= Y_test.iloc[_]):\n",
     "                    ax1.scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=1.5, label='Negative Forecast', edgecolor=pal_red[3], color=pal_red[1])\n",
     "                else:\n",
-    "                    ax1.scatter(index[_], predict_model[_], s=abs(Y_test.iloc[_] - predict_model[_]), linewidth=0.3, label='False Forecast', edgecolor=pal_black[5], color=pal_black[1])\n",
+    "                    ax1.scatter(index[_], predict_model[_], linewidth=0.3, label='False Forecast', edgecolor=pal_black[5], color=pal_black[1])\n",
     "            \n",
     "            fig = gridspec.GridSpec(1, 2)\n",
     "            pl.figure(figsize=(17, 4), tight_layout=True)\n",
@@ -835,6 +840,204 @@
     "        if len(List_RSI) > 0:\n",
     "            rsi_checkbox.observe(plot_ohlc, names='value')\n",
     "        forecast_checkbox.observe(plot_ohlc, names='value')\n",
+    "    # Initial plot\n",
+    "    plot_ohlc()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1ad731c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def FOREX_OHLC(dataframe, col_open, col_high, col_low, col_close):\n",
+    "    '''\n",
+    "    This Function visualizes a plot of dataframe OPEN - HIGH - LOW - Close values.\n",
+    "    Also if exists Strategies (Moving Average etc...) visualizes a check-box to plot them.\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): DataFrame\n",
+    "    Parameter(col_open): Column Name (String)\n",
+    "    Parameter(col_high): Column Name (String)\n",
+    "    Parameter(col_low): Column Name (String)\n",
+    "    Parameter(col_close): Column Name (String)\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "    \n",
+    "    data_number = 60\n",
+    "    data_pred = 30\n",
+    "    #------------#\n",
+    "    new_dataframe = dataframe.copy()\n",
+    "    new_dataframe.dropna(axis=0, inplace=True)\n",
+    "    list_index = new_dataframe[-data_number:].index\n",
+    "    list_index = pd.to_datetime(list_index)\n",
+    "\n",
+    "    list_open = new_dataframe[col_open][-data_number:].values\n",
+    "    list_high = new_dataframe[col_high][-data_number:].values\n",
+    "    list_low = new_dataframe[col_low][-data_number:].values\n",
+    "    list_close = new_dataframe[col_close][-data_number:].values\n",
+    "    #------------#\n",
+    "    \n",
+    "    #------------ Moving Average ------------#\n",
+    "    List_MA = []\n",
+    "    MA = ['_SMA_','_FMA_', '_EMA_']\n",
+    "    for __ in range(len(MA)):\n",
+    "        for _ in range(len(new_dataframe.columns)):\n",
+    "            if MA[__] in new_dataframe.columns[_]:\n",
+    "                List_MA.append(new_dataframe.columns[_])\n",
+    "\n",
+    "    if len(List_MA) == 3:\n",
+    "        #Create the checkbox widget\n",
+    "        sma_checkbox = widgets.Checkbox(value=False, description='Slow Moving Average', disabled=False, indent=False)\n",
+    "        fma_checkbox = widgets.Checkbox(value=False, description='Fast Moving Average', disabled=False, indent=False)\n",
+    "        ema_checkbox = widgets.Checkbox(value=False, description='Extra-F Moving Average', disabled=False, indent=False)\n",
+    "        mo_av_s = new_dataframe[List_MA[0]][-data_number:].values\n",
+    "        mo_av_f = new_dataframe[List_MA[1]][-data_number:].values\n",
+    "        mo_av_ef = new_dataframe[List_MA[2]][-data_number:].values\n",
+    "    #------------ Moving Average ------------#    \n",
+    "    \n",
+    "    #------------ Exponential Moving Average ------------#\n",
+    "    List_EMA = []\n",
+    "    EMA = ['_SEMA_','_FEMA_', '_EFEMA_']\n",
+    "    for __ in range(len(EMA)):\n",
+    "        for _ in range(len(new_dataframe.columns)):\n",
+    "            if EMA [__] in new_dataframe.columns[_]:\n",
+    "                List_EMA.append(new_dataframe.columns[_])\n",
+    "    if len(List_EMA) == 3:\n",
+    "        #Create the checkbox widget\n",
+    "        sema_checkbox = widgets.Checkbox(value=False, description='Slow Exponential Moving Average', disabled=False, indent=False)\n",
+    "        fema_checkbox = widgets.Checkbox(value=False, description='Fast Exponential Moving Average', disabled=False, indent=False)\n",
+    "        efema_checkbox = widgets.Checkbox(value=False, description='Extra-F Exponential Moving Average', disabled=False, indent=False)\n",
+    "        sema_ = new_dataframe[List_EMA[0]][-data_number:].values\n",
+    "        fema_ = new_dataframe[List_EMA[1]][-data_number:].values\n",
+    "        efema_ = new_dataframe[List_EMA[2]][-data_number:].values\n",
+    "    #------------ Exponential Moving Average ------------#\n",
+    "    \n",
+    "    #------------ Relative_Strength_Index ------------#\n",
+    "    List_RSI = []\n",
+    "    RSI = ['_RSI_']\n",
+    "    for __ in range(len(RSI)):\n",
+    "        for _ in range(len(new_dataframe.columns)):\n",
+    "            if RSI [__] in new_dataframe.columns[_]:\n",
+    "                List_RSI.append(new_dataframe.columns[_])\n",
+    "    if (len(List_RSI) > 0):\n",
+    "        #Create the checkbox widget\n",
+    "        rsi_checkbox = widgets.Checkbox(value=False, description='Relative Strength Index', disabled=False, indent=False)\n",
+    "        rsi = new_dataframe[List_RSI][-data_number:].values\n",
+    "    #------------ Relative_Strength_Index ------------#\n",
+    "    \n",
+    "    \n",
+    "    def plot_ohlc(change=None):\n",
+    "        #Clear the current output\n",
+    "        clear_output(wait=True)\n",
+    "\n",
+    "        #Display the checkbox\n",
+    "        if len(List_MA) == 3:\n",
+    "            ma_box = widgets.HBox([sma_checkbox,fma_checkbox, ema_checkbox])\n",
+    "            display(ma_box)\n",
+    "        if len(List_EMA) == 3:\n",
+    "            ema_box = widgets.HBox([sema_checkbox,fema_checkbox, efema_checkbox])\n",
+    "            display(ema_box)\n",
+    "        if len(List_RSI) > 0:\n",
+    "            rsi_box = widgets.VBox([rsi_checkbox])\n",
+    "            display(rsi_box)\n",
+    "        \n",
+    "        plt.style.use(\"cyberpunk\")  # Background color\n",
+    "        pal_black = sns.color_palette(\"Greys\")\n",
+    "        pal_red = sns.color_palette(\"flare\")  # Red color palette\n",
+    "        pal_green = sns.color_palette(\"light:#5A9\")  # Green color palette\n",
+    "        pal_blue = sns.color_palette(\"ch:start=.2,rot=-.3\") # Blue color palette\n",
+    "        pal_pink = sns.cubehelix_palette()\n",
+    "        fig, ax1 = plt.subplots(figsize=(15, 7), tight_layout=True)  # Figure size\n",
+    "        \n",
+    "        plt.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3,  direction=\"in\", colors='White') #Rotation label x and y\n",
+    "        plt.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
+    "        plt.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "\n",
+    "        for _ in range(len(list_index)):\n",
+    "            if (list_open[_] > list_close[_]):\n",
+    "                ax1.bar(list_index[_], list_open[_] - list_close[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_close[_], edgecolor=pal_red[2], color='None')\n",
+    "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_red[3])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_red[2])\n",
+    "            elif (list_open[_] < list_close[_]):\n",
+    "                ax1.bar(list_index[_], list_close[_] - list_open[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_open[_], edgecolor=pal_green[4], color='None')\n",
+    "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_green[5])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_green[4])\n",
+    "            else:\n",
+    "                ax1.bar(list_index[_], list_close[_] - list_open[_], width=0.7, linewidth=1.5, alpha=0.8, bottom=list_open[_], edgecolor=pal_black[2], color='None')\n",
+    "                ax1.axvline(x=list_index[_], alpha=0.1, linewidth=7, color=pal_black[4])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_close[_], ymax=list_high[_], alpha=0.7, linestyles=\"dashed\", colors=pal_black[2])\n",
+    "                plt.vlines(x=list_index[_], ymin=list_open[_], ymax=list_low[_], alpha=0.7, linestyles=\"dashed\", colors=pal_black[2])\n",
+    "                \n",
+    "        # Update the last bar's color based on the checkbox state\n",
+    "        if len(List_MA) == 3:\n",
+    "            if sma_checkbox.value:\n",
+    "                plt.plot(list_index, mo_av_s, linewidth=1.7, label='Slow Moving Average', linestyle='--', color=pal_blue[1])\n",
+    "                plt.legend(loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "            if fma_checkbox.value:\n",
+    "                plt.plot(list_index, mo_av_f, linewidth=1.7, label='Fast Moving Average', linestyle='--', color=pal_blue[3])\n",
+    "                plt.legend(loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "            if ema_checkbox.value:\n",
+    "                plt.plot(list_index, mo_av_ef, linewidth=1.7, label='Extra-F Moving Average', linestyle='--', color=pal_blue[4])\n",
+    "                plt.legend(loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "                \n",
+    "        if len(List_EMA) == 3:  \n",
+    "            if sema_checkbox.value:\n",
+    "                plt.plot(list_index, sema_, linewidth=1.7, label='Slow Exponential Moving Average', linestyle='--', color=pal_pink[1])\n",
+    "                plt.legend(loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "            if fema_checkbox.value:\n",
+    "                plt.plot(list_index, fema_, linewidth=1.7, label='Fast Exponential Moving Average', linestyle='--', color=pal_pink[3])\n",
+    "                plt.legend(loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "            if efema_checkbox.value:\n",
+    "                plt.plot(list_index, efema_, linewidth=1.7, label='Extra-F Exponential Moving Average', linestyle='--', color=pal_blue[4])\n",
+    "                plt.legend(loc=\"upper right\", fontsize=15) #Label - Size of plot    \n",
+    "            \n",
+    "        if len(List_RSI) > 0:\n",
+    "            if rsi_checkbox.value:\n",
+    "                fig, ax2 = plt.subplots(figsize=(17,4), tight_layout=True) #Size of plot dpi=300 for better quality\n",
+    "                outline=mpe.withStroke(linewidth=1.5, alpha=1, foreground='White')\n",
+    "                ax2.plot(list_index, rsi, linewidth=1.5, alpha=0.7, path_effects=[outline], color=pal_red[0])\n",
+    "                mplcp.add_gradient_fill(alpha_gradientglow=0.3) #Glow - Effect lines\n",
+    "    \n",
+    "                ax2.axhline(30, linestyle='--', linewidth=1.5, color=pal_green[5])\n",
+    "                ax2.axhline(50, linestyle='--', linewidth=1.5, color=pal_red[3])\n",
+    "                ax2.text(list_index[0], 32, 'Buy', fontweight='bold', ha ='right', va ='center', fontsize=15) \n",
+    "                ax2.text(list_index[0], 48, 'Sell', fontweight='bold', ha ='right', va ='center', fontsize=15) \n",
+    "        \n",
+    "                ax2.set_title('Relative Strength Index', fontdict={'fontsize':20})\n",
+    "                plt.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3,  direction=\"in\", colors='White') #Rotation label x and y\n",
+    "                plt.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
+    "                plt.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "                \n",
+    "                ax2.spines['top'].set_visible(False)\n",
+    "                ax2.spines['right'].set_visible(False)\n",
+    "                ax2.spines['left'].set_color('White')\n",
+    "                ax2.spines['left'].set_linewidth(0.3)\n",
+    "                ax2.spines['bottom'].set_color('White')\n",
+    "                ax2.spines['bottom'].set_linewidth(0.3)\n",
+    "        \n",
+    "        ax1.spines['top'].set_visible(False)\n",
+    "        ax1.spines['right'].set_visible(False)\n",
+    "        ax1.spines['left'].set_color('White')\n",
+    "        ax1.spines['left'].set_linewidth(0.3)\n",
+    "        ax1.spines['bottom'].set_color('White')\n",
+    "        ax1.spines['bottom'].set_linewidth(0.3)\n",
+    "        \n",
+    "        plt.show()\n",
+    "        \n",
+    "        #Attach the observer to the checkbox\n",
+    "        if len(List_MA) == 3:\n",
+    "            sma_checkbox.observe(plot_ohlc, names='value')\n",
+    "            fma_checkbox.observe(plot_ohlc, names='value')\n",
+    "            ema_checkbox.observe(plot_ohlc, names='value')\n",
+    "        if len(List_EMA) == 3:\n",
+    "            sema_checkbox.observe(plot_ohlc, names='value')\n",
+    "            fema_checkbox.observe(plot_ohlc, names='value')\n",
+    "            efema_checkbox.observe(plot_ohlc, names='value')\n",
+    "        if len(List_RSI) > 0:\n",
+    "            rsi_checkbox.observe(plot_ohlc, names='value')\n",
     "    # Initial plot\n",
     "    plot_ohlc()"
    ]
